# claude-native-hackathon-II

./: CLAUDE.md  INTEGRATION_SUMMARY.md  REUSABILITY_WORKFLOW.md  SETUP.md  SKILLS_AND_AGENTS.md  SKILL_CREATOR_PRO_ANALYSIS.md  analysis-report.md  error.md  main.py  pyproject.toml
.claude/: settings.local.json
.claude/agents/: architect-reviewer.md  constitution-validator.md  security-reviewer.md  test-reviewer.md
.claude/commands/: fastapi.endpoint.md  nextjs.form.md
.claude/skills/architecture-review/: SKILL.md
.claude/skills/better-auth-integration-v2/: README.md  SKILL.md
.claude/skills/database-schema-architect/: SKILL.md
.claude/skills/fastapi-sqlmodel-patterns/: SKILL.md
.claude/skills/integration-pattern-finder/: SKILL.md
.claude/skills/neon-postgres-integration/: SKILL.md
.claude/skills/restful-api-designer/: SKILL.md
.claude/skills/tdd-red-green-refactor/: README_SUMMARY.md  SKILL.md
.claude/skills/test-first-generator/: SKILL.md
.specify/memory/: constitution.md
backend/: .env.example  pyproject.toml
backend/src/db/: database.py
backend/src/models/: task.py
frontend/: .env.example
frontend/src/hooks/: useTasks.ts
frontend/src/types/: task.ts
specs/001-cli-todo/: plan.md  quickstart.md  spec.md  tasks.md
specs/001-todo-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-web-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-voice-input-add-todo/: plan.md  research.md
specs/002-todo-organization-features/: plan.md  tasks.md
(+68 files in other folders)
